# bluesound-dashboard

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  release.yml  test.yml
backend/: pyproject.toml
backend/app/: __init__.py  cli.py  config.py  logging.py  main.py  middleware.py  models.py  state.py  validators.py
backend/app/api/: deps.py  errors.py  routes.py
backend/app/bluos/: __init__.py  client.py  xml.py
backend/app/discovery/: __init__.py  lsdp.py  mdns.py  service.py
backend/app/services/: events.py  poller.py  sync.py
backend/tests/: helpers.py  test_api.py  test_client.py  test_client_errors.py  test_controls.py  test_coverage_gaps.py  test_device_routes.py  test_discovery.py  test_discovery_merge.py  test_events.py  test_fleet_volume.py  test_logging.py  test_lsdp.py  test_main.py  test_main_app.py  test_mdns.py  test_poller.py  test_rate_limiter.py  test_settings_matrix.py  test_sync_ungroup.py  test_validators_xml.py
backend/tests/fixtures/: settings_audio.xml  settings_player.xml  xml_samples.py
docs/: CONFIGURATION.md  RUNBOOK.md
frontend/: .npmrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  version.ts
frontend/tests/: DeviceSettingsPanel.test.tsx  HousePage.test.tsx  PlayerDetailPage.test.tsx  apiClient.test.ts  (+4 more)
scripts/: build  install  run
(+19 files in other folders)
