[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bluesound-dashboard"
version = "0.4.0"
description = "Consolidated Bluesound / BluOS LAN dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "tbaur" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "zeroconf>=0.136.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "httpx>=0.27.0",
  "respx>=0.21.0",
]

[project.scripts]
bluesound-dashboard = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/cli.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
packages = ["app"]
warn_return_any = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["app.main", "app.api.routes"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
